<resources>
    <string name="app_name">EMS maintenance</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">The username or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="report_field_required">Please fill out a report</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="workTypesText">"Select Job Type"</string>
    <string name="submit_report">Submit Report</string>
    <string name="report_hint">Enter your report here</string>
    <string name="thank_you">Thank You!</string>
    <string name="global_url">https://app.hopcontracting.net/api</string><!--<string name="global_url">http://10.0.0.17:8000/api</string>-->
    <string name="welcome">Welcome!</string>
    <string name="location">Location:</string>
    <string name="date">Date:</string>
    <string name="service">How would you rate your service?</string>
    <string name="all_of_your_work_is_completed">You have completed all of your jobs</string>
    <string name="title_activity_user_selector">UserSelector</string>

    <string name="what_describes_you_best">What describes you best?</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="title_activity_customer_request_form">CustomerRequestForm</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="worker">Worker</string>
    <string name="customer">Customer</string>
    <string name="request">Request</string>
    <string name="please_make_your_request_below">Please make your request below</string>
    <string name="please_describe_your_request_here">Please describe your request here</string>
    <string name="submit_request">Submit Request</string>
    <string name="continue_text">Continue</string>
    <string name="thank_you_your_request">Thank You,Your request has been succesfully sent.</string>
    <string name="select_images">Select Images</string>
    <string name="job_details">Job Details</string>
    <string name="before_images">Before Images</string>
    <string name="done_text">Done</string>
    <string name="please_sign_below">Please Sign Below</string>
    <string name="service_completed">Service Completed</string>
    <string name="email">Email or username</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="before_and_after_images">Before and after images</string>
    <string name="report">Report</string>
    <string name="submit_to_supervisor">Submit to supervisor</string>
    <string name="save_request">Save request</string>
    <string name="clock_in">Clock In</string>
    <string name="lunch_in">Lunch In</string>
    <string name="lunch">Lunch</string>
    <string name="lunch_out">Lunch Out</string>
    <string name="scan_inventory">Scan Inventory</string>
    <string name="scan_barcode_above">Scan Barcode above</string>
    <string name="select_sending_to_and_current_area">Please select valid moving from area and sending to area</string>
    <string name="scan_assets">Please scan assets.</string>
    <string name="select_a_valid_code">Please select a valid area code</string>
    <string name="associate">Associate</string>
    <string name="customer_email">Customer Email</string>
    <string name="other_users">Other users</string>
    <string name="sign_up">Sign up</string>
    <string name="company_name">Company name</string>
    <string name="new_user">New User</string>
    <string name="notes">Notes</string>
</resources>
