<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_page_background">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/new_user"
        android:textColor="@color/text_black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background_normal"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="40dp"
        android:textColor="@color/colorPrimaryDark"

        app:layout_constraintDimensionRatio="h,5.75:0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background_normal"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="40dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintDimensionRatio="h,5.75:0.7"
        app:layout_constraintEnd_toEndOf="@+id/editTextUserName"
        app:layout_constraintStart_toStartOf="@+id/editTextUserName"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />


    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintDimensionRatio="h,6:0.8"
        app:layout_constraintEnd_toEndOf="@+id/editTextDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/textViewPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background_normal"
        android:ems="10"
        android:hint="@string/phone_number"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:paddingStart="40dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintDimensionRatio="h,5.75:0.7"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <ImageView
        android:id="@+id/imageViewPhone"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/gray_phone"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/textViewPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/textViewPhoneNumber" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="14"
        android:paddingStart="40dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintDimensionRatio="h,5.75:0.7"
        app:layout_constraintEnd_toEndOf="@+id/textViewPhoneNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhoneNumber" />

    <ImageView
        android:id="@+id/imageViewPassword"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/gray_password"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/textViewCompanyName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/company_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingStart="40dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintDimensionRatio="h,5.75:0.7"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <ImageView
        android:id="@+id/imageViewCompanyName"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewCompanyName"
        app:layout_constraintStart_toStartOf="@+id/textViewCompanyName"
        app:layout_constraintTop_toTopOf="@+id/textViewCompanyName" />


    <ImageView
        android:id="@+id/imageViewUsername"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextUserName"
        app:layout_constraintStart_toStartOf="@+id/editTextUserName"
        app:layout_constraintTop_toTopOf="@+id/editTextUserName"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewEmail"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toTopOf="@+id/editTextEmail"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/gray_email" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="left|top"
        android:hint="@string/notes"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:lines="8"
        android:maxLines="10"
        android:minLines="4"
        android:paddingEnd="5dp"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@+id/textViewCompanyName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewCompanyName"
        app:layout_constraintTop_toBottomOf="@id/textViewCompanyName"
        tools:layout_editor_absoluteY="210dp" />

    <ImageView
        android:id="@+id/imageViewDescription"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/gray_request"
        app:layout_constraintStart_toStartOf="@+id/editTextDescription"
        app:layout_constraintTop_toTopOf="@+id/editTextDescription" />


</android.support.constraint.ConstraintLayout>