<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customer_request_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="1">

    <ProgressBar
        android:id="@+id/request_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/customer_request_form_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.hopcontracting.ian.hopworkorder.CustomerRequestForm"
        tools:showIn="@layout/activity_customer_request_form">
        <!--
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
    -->


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="80dp"
            android:layout_height="39dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="54dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_clear" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Please make your request below"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="359dp"
            android:layout_height="29dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_bg"
            android:gravity="top|start"
            android:hint="@string/email_hint"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/edit_text_input_phone_number"
            android:layout_width="359dp"
            android:layout_height="29dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/rounded_bg"
            android:gravity="top|start"
            android:hint="@string/phone_number_hint"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:maxLength="14"
            android:textAlignment="center"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_email" />


        <EditText
            android:id="@+id/edit_text_input_notes"
            android:layout_width="358dp"
            android:layout_height="78dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_bg"
            android:gravity="top|start"
            android:hint="@string/please_describe_your_request_here"
            android:imeOptions="actionDone"
            android:inputType="textImeMultiLine"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_input_phone_number" />

        <Spinner
            android:id="@+id/work_type_spinner"
            android:layout_width="358dp"
            android:layout_height="40dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rounded_bg"
            android:textAlignment="center"
            android:tooltipText="@string/workTypesText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_input_notes"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />


        <ListView
            android:id="@+id/work_types_list_view"
            android:layout_width="354dp"
            android:layout_height="109dp"
            android:layout_marginEnd="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/work_type_spinner"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_bg"
            android:text="@string/submit"
            android:textAlignment="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/work_types_list_view" />


    </android.support.constraint.ConstraintLayout>
</LinearLayout>